--- a/antora-playbook.yml
+++ b/antora-playbook.yml
@@ -1,13 +1,11 @@
 site:
-  title: IHTIC Docs
-  start_page: component-b::index.adoc 
+  title: IHITC Docs
+  url: https://bfranske.github.io/ihitc-docs/
+  start_page: program-info::index.adoc 
 content:
   sources: 
-  - url: https://gitlab.com/antora/demo/demo-component-a.git
+  - url: https://github.com/bfranske/ihitc-docs.git
     branches: HEAD
-  - url: https://gitlab.com/antora/demo/demo-component-b.git
-    branches: [v2.0, v1.0]
-    start_path: docs
 ui: 
   bundle:
     url: https://gitlab.com/antora/antora-ui-default/-/jobs/artifacts/HEAD/raw/build/ui-bundle.zip?job=bundle-stable
