--- a/franske-course-information/antora.yml
+++ b/franske-course-information/antora.yml
@@ -2,5 +2,4 @@ name: franske-courses
 title: Dr. Franske's Course Pages
 version: '2022.SP'
 nav:
- - modules/ROOT/nav.adoc
- - modules/itc-2480/nav.adoc
+ - modules/ROOT/navtop.adoc
