--- a/program-information/antora.yml
+++ b/program-information/antora.yml
@@ -2,5 +2,4 @@ name: program-info
 title: Program Information
 version: '2022.SP'
 nav:
- - modules/ROOT/nav.adoc
- - modules/ROOT/othernav.adoc
+ - modules/ROOT/navtop.adoc
