add remaining top level sections and nav

--- a/antora-playbook.yml
+++ b/antora-playbook.yml
@@ -8,6 +8,7 @@ content:
     start_paths: 
     - program-information/
     - franske-course-information/
+    - technical-information/
     branches: HEAD
 ui: 
   bundle:
