add software info to playbook

--- a/antora-playbook.yml
+++ b/antora-playbook.yml
@@ -9,6 +9,7 @@ content:
     - program-information/
     - franske-course-information/
     - technical-information/
+    - software-information/
     branches: HEAD
 ui: 
   bundle:
