--- a/antora-playbook.yml
+++ b/antora-playbook.yml
@@ -15,3 +15,6 @@ ui:
   bundle:
     url: https://gitlab.com/antora/antora-ui-default/-/jobs/artifacts/HEAD/raw/build/ui-bundle.zip?job=bundle-stable
     snapshot: true
+urls:
+  html_extension_style: drop
+  latest_version_segment: current
