--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -9,7 +9,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
       - name: Run Antora
-        uses: kameshsampath/antora-site-action@3fcb79815255c9d39edf9013aae94c401b536df6
+        uses: kameshsampath/antora-site-action@master
         with:
           antora_playbook: antora-playbook.yml
           antora_generator: 'antora-site-generator-lunr'
