--- a/antora-playbook.yml
+++ b/antora-playbook.yml
@@ -15,6 +15,10 @@ ui:
   bundle:
     url: https://gitlab.com/antora/antora-ui-default/-/jobs/artifacts/HEAD/raw/build/ui-bundle.zip?job=bundle-stable
     snapshot: true
+  supplemental_files: ./node_modules/@antora/lunr-extension/supplemental_ui
 urls:
   html_extension_style: drop
   latest_version_segment: current
+antora:
+  extensions:
+  - require: '@antora/lunr-extension'
