--- a/.github/workflows/publish2.yml
+++ b/.github/workflows/publish2.yml
@@ -7,10 +7,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
-        - uses: actions/checkout@v2
+        uses: actions/checkout@v2
       - name: Setup NPM
-        - uses: actions/setup-node@v2
+        uses: actions/setup-node@v2
           with:
             node-version: '14'
-        - run: npm install
-        - run: npm test
+        run: npm install
+        run: npm test
