--- a/.github/workflows/publish2.yml
+++ b/.github/workflows/publish2.yml
@@ -12,5 +12,6 @@ jobs:
         uses: actions/setup-node@v2
           with:
             node-version: '14'
+      - name: Run NPM Stuff
         run: npm install
         run: npm test
