--- a/.github/workflows/publish2.yml
+++ b/.github/workflows/publish2.yml
@@ -13,5 +13,6 @@ jobs:
         with:
           node-version: '14'
       - name: Run NPM Stuff
-        run: npm install
-        run: npm test
+        run: | 
+          npm install
+          npm test
