--- a/.github/workflows/publish2.yml
+++ b/.github/workflows/publish2.yml
@@ -14,6 +14,8 @@ jobs:
           node-version: '16'
       - name: Install Antora and Lunr
         run: npm install -g @antora/cli@3.0.0 @antora/site-generator@3.0.0 @antora/lunr-extension
+      - name: See Where Modules Went
+        run: npm list -g
       - name: Generate Site
         run: antora antora-playbook.yml
       - name: List Files
