--- a/.github/workflows/publish2.yml
+++ b/.github/workflows/publish2.yml
@@ -12,10 +12,10 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: '16'
-      - name: Install Antora and Lunr
-        run: npm install -g @antora/cli@3.0.0 @antora/site-generator@3.0.0 @antora/lunr-extension
-      - name: See Where Modules Went
-        run: npm list -g
+      - name: Install Antora Globally
+        run: npm install -g @antora/cli@3.0.0 @antora/site-generator@3.0.0 
+      - name: Install Lunr locally  
+        run: npm install @antora/lunr-extension
       - name: Generate Site
         run: antora antora-playbook.yml
       - name: List Files
