--- a/.github/workflows/publish-manual.yml
+++ b/.github/workflows/publish-manual.yml
@@ -10,7 +10,7 @@ jobs:
         uses: bfranske/antora-site-action@master
         with:
           antora_playbook: antora-playbook.yml
-          antora_lunr_docsearch_enabled: true
+          antora_lunr_docsearch_enabled: false
       - name: Publish to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
