stop publish2 from actually publishing

--- a/.github/workflows/publish2.yml
+++ b/.github/workflows/publish2.yml
@@ -18,8 +18,8 @@ jobs:
         run: npm install @antora/lunr-extension
       - name: Generate Site
         run: antora antora-playbook.yml
-      - name: Publish to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: build/site
+#      - name: Publish to GitHub Pages
+#        uses: peaceiris/actions-gh-pages@v3
+#        with:
+#          github_token: ${{ secrets.GITHUB_TOKEN }}
+#          publish_dir: build/site
