--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,4 +1,4 @@
-name: Publish to GitHub Pages
+name: Publish to GitHub Pages Directly with NPM
 on:
   push:
     branches: [main]
@@ -8,11 +8,16 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
-      - name: Run Antora
-        uses: bfranske/antora-site-action@master
+      - name: Setup NPM
+        uses: actions/setup-node@v2
         with:
-          antora_playbook: antora-playbook.yml
-          antora_lunr_docsearch_enabled: true
+          node-version: '16'
+      - name: Install Antora Globally
+        run: npm install -g @antora/cli@3.0.1 @antora/site-generator@3.0.1 
+      - name: Install Lunr locally  
+        run: npm install @antora/lunr-extension
+      - name: Generate Site
+        run: antora antora-playbook.yml
       - name: Publish to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
