--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,7 +1,9 @@
 name: Publish to GitHub Pages Directly with NPM
 on:
   push:
-    branches: [main]
+    branches:
+      - '[0-9][0-9][0-9][0-9].[0-9][0-9]'
+      - 'main'
 jobs:
   build:
     runs-on: ubuntu-latest
