--- a/antora-playbook.yml
+++ b/antora-playbook.yml
@@ -15,6 +15,16 @@ ui:
   bundle:
     url: https://gitlab.com/antora/antora-ui-default/-/jobs/artifacts/HEAD/raw/build/ui-bundle.zip?job=bundle-stable
     snapshot: true
+  supplemental_files:
+  - path: ui.yml
+    contents: |
+      static_files:
+      - .nojekyll
+      - CNAME
+  - path: .nojekyll
+  - path: CNAME
+    contents: |
+      info.ihitc.net
 urls:
   html_extension_style: drop
   latest_version_segment: current
