--- a/antora-playbook.yml
+++ b/antora-playbook.yml
@@ -23,6 +23,7 @@ ui:
       - shakespeare.tar.gz
       - hello_2.10-3_amd64.deb
       - icecream_db.tar.gz
+      - ITCPassportVPN.ovpn
   - path: CNAME
     contents: |
       info.ihitc.net
@@ -32,6 +33,8 @@ ui:
     contents: ./static/hello_2.10-3_amd64.deb
   - path: icecream_db.tar.gz
     contents: ./static/icecream_db.tar.gz
+  - path: ITCPassportVPN.ovpn
+    contents: ./static/ITCPassportVPN.ovpn
 urls:
   html_extension_style: drop
   latest_version_segment: current
