--- a/antora-playbook.yml
+++ b/antora-playbook.yml
@@ -23,7 +23,8 @@ ui:
       - shakespeare.tar.gz
       - hello_2.10-3_amd64.deb
       - icecream_db.tar.gz
-      - itc-passport-vpn.ovpn
+      - ITC-Passport-VPN.ovpn
+      - .nojekyll
   - path: CNAME
     contents: |
       info.ihitc.net
@@ -33,8 +34,9 @@ ui:
     contents: ./static/hello_2.10-3_amd64.deb
   - path: icecream_db.tar.gz
     contents: ./static/icecream_db.tar.gz
-  - path: itc-passport-vpn.ovpn
-    contents: ./static/itc-passport-vpn.ovpn
+  - path: ITC-Passport-VPN.ovpn
+    contents: ./static/ITC-Passport-VPN.ovpn
+  - path: .nojekyll
 urls:
   html_extension_style: drop
   latest_version_segment: current
