test portable committing

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-    "asciidoc.antora.enableAntoraSupport": true,
-    "git.autorefresh": true
+    "git.autorefresh": true,
+    "asciidoc.antora.enableAntoraSupport": true
 }
